<!--
    Copyright © Microsoft Corporation, All Rights Reserved
    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at
    
    http:www.apache.org/licenses/LICENSE-2.0
    
    THIS CODE IS PROVIDED *AS IS* BASIS, WITHOUT WARRANTIES OR CONDITIONS
    OF ANY KIND, EITHER EXPRESS OR IMPLIED, INCLUDING WITHOUT LIMITATION
    ANY IMPLIED WARRANTIES OR CONDITIONS OF TITLE, FITNESS FOR A
    PARTICULAR PURPOSE, MERCHANTABILITY OR NON-INFRINGEMENT.
    
    See the Apache License, Version 2.0 for the specific language
    governing permissions and limitations under the License.
-->
<resources>
<string name="select_templates">Select templates</string>
<string name="select_template_title">Select a protection template</string>
<string name="protect">Protect</string>
<string name="protected_content">Protected content</string>
<string name="granted_by_string">Granted by</string>
<string name="use_rights_string">Use Rights</string>
<string name="ok">OK</string>
<string name="close_string">Close</string>
<string name="report">Send e-mail</string>
<string name="error_report_reporting_string">An error occurred when reporting message</string>
<string name="apply">Apply</string>
<string name="protection">Protection</string>
<string name="permissions">Permissions</string>
<string name="your_permissions">Your permissions</string>
<string name="error_report_message">You\'ve found a problem with the Windows Azure AD Rights Management SDK. Please help us improve our product by sending this e-mail.</string>
<string name="policy_viewer_non_owner_content">You have the following permissions for this file:</string>
<string name="policy_viewer_owner_content">You have set the following permissions on this file:</string>
<string name="viewer">Viewer</string>
<string name="reviewer">Reviewer</string>
<string name="co_author">Co-author</string>
<string name="co_owner">Co-owner</string>
<string name="adrms">ADRMS</string>
<string name="sdk_ver">4.0</string>
<string name="edit_permissions">Edit Permissions</string>
<string name="edit">Edit</string>
<string name="remove">Remove</string>
<string name="version_code">1</string>
<string name="version_name">1.0.0.51970</string>
<string name="owner_description_string">Full Control</string>
<string name="view_description_string">View</string>
<string name="edit_description_string">Edit</string>
<string name="export_description_string">Save as</string>
<string name="extract_description_string">Copy</string>
<string name="print_description_string">Print</string>
<string name="reply_description_string">Reply</string>
<string name="reply_all_description_string">Reply All</string>
<string name="forward_description_string">Forward</string>
<string name="comment_description_string">Comment</string>
<string name="ad_hoc_policy_name_string">RESTRICTED ACCESS</string>
<string name="ad_hoc_policy_description_string">Permission is currently restricted. Only specified users can access this content</string>
<string name="no_permissions_policy_name_string">No Permissions</string>
<string name="no_protection_policy_name_string">No Protection</string>
<string name="no_protection_policy_name_string_description">This content isn\'t protected.</string>
<string name="error_reporting_consent_request_string">We\'re sorry. An error has occurred. Can you send us the error logs so we can fix the problem?</string>
<string name="error_reporting_consent_ok_button_string">OK</string>
<string name="error_reporting_consent_cancel_button_string">Cancel</string>
<string name="privacy_hyperlink">&lt;a href=\'http://go.microsoft.com/fwlink/?LinkId=317563\'&gt;Privacy&lt;/a&gt;</string>
<string name="help_hyperlink">&lt;a href=\'http://go.microsoft.com/fwlink/?LinkId=317564\'&gt;Help&lt;/a&gt;</string>
<string name="error_invalid_email_address_string">Invalid email address</string>
<string name="rms_logo_content_description">Rights Management Services</string>
<string name="email_instruction_text">Enter your organizational email address</string>
<string name="email_hint_text">someone@example.com</string>
<string name="continue_button_text">Continue</string>
<string name="custom_policy_viewer">Viewer - View Only</string>
<string name="custom_policy_reviewer">Reviewer - View, edit</string>
<string name="custom_policy_co_auther">Co-author - View, edit, copy, print</string>
<string name="custom_policy_co_owner">Co-Owner - All Permissions</string>
<string name="custom_policy_encrypt_only">Authenticated User – No usage restrictions</string>
<string name="custom_policy_viewer_description">Use this option when sharing outside your organization. Recipients will only be able to view the document. They cannot edit, copy, or print it.</string>
<string name="custom_policy_reviewer_description">Use this option when sharing outside your organization. Recipients will be able to view and edit the document. They cannot copy or print it.</string>
<string name="custom_policy_co_auther_description">Use this option when sharing outside your organization. Recipients will be able to view, edit, copy, and print the document.</string>
<string name="custom_policy_co_owner_description">Use this option when sharing outside your organization. Recipients will have all permissions.</string>
<string name="custom_policy_encrypt_only_description">Recipients must provide valid user credentials. After the document is opened, usage restrictions aren’t enforced.</string>
<string name="duration_never">Never</string>
<string name="duration_one_week">After 1 week</string>
<string name="duration_one_month">After 1 month</string>
<string name="duration_two_months">After 2 months</string>
<string name="duration_custom">Custom</string>
<string name="content_expires">Content Expires</string>
<string name="email_to">To</string>
</resources>
