<!--
    Copyright © Microsoft Corporation, All Rights Reserved
    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at
    
    http:www.apache.org/licenses/LICENSE-2.0
    
    THIS CODE IS PROVIDED *AS IS* BASIS, WITHOUT WARRANTIES OR CONDITIONS
    OF ANY KIND, EITHER EXPRESS OR IMPLIED, INCLUDING WITHOUT LIMITATION
    ANY IMPLIED WARRANTIES OR CONDITIONS OF TITLE, FITNESS FOR A
    PARTICULAR PURPOSE, MERCHANTABILITY OR NON-INFRINGEMENT.
    
    See the Apache License, Version 2.0 for the specific language
    governing permissions and limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:background="@color/white"
    android:id="@+id/custom_permissions_fragment_layout"
    android:layout_height="match_parent"
    android:orientation="vertical"
     >
    <!-- Placeholder editText for email picker -->
     <EditText
    android:id="@+id/email_address"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:hint="@string/email_to"
    android:inputType="textEmailAddress" />
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="8dp"
    	android:paddingTop="16dp" >

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:textColor="@color/dark_grey"
            android:layout_marginLeft="16dp"
        	android:layout_marginRight="16dp"
        	android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_weight="0.33"
            android:text="@string/permissions" />

        
        <TextView
            android:id="@+id/custom_policy_name"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:textColor="@color/dark_grey"
            android:layout_marginLeft="16dp"
        	android:layout_marginRight="16dp"
        	android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:layout_weight="0.67"
            android:background="@color/light_gray"
            android:text="@string/permissions" />
        
        
    </LinearLayout>

     <View
   		android:layout_width="fill_parent"
   		android:layout_height="1dp"
   		android:layout_marginStart="16dp"
   		android:layout_marginEnd="16dp"
   		android:background="@android:color/darker_gray"/>
            
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="8dp"
    	android:paddingTop="16dp" >

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:textColor="@color/dark_grey"
            android:layout_weight="0.33"
            android:layout_marginLeft="16dp"
        	android:layout_marginRight="16dp"
        	android:layout_gravity="center"
        	android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/content_expires" />

        <TextView
            android:id="@+id/custom_policy_duration"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_weight="0.67"
            android:background="@color/light_gray"
            android:focusable="false"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/duration_never"
            android:textColor="@color/dark_grey" />

    </LinearLayout>

    <View
   		android:layout_width="fill_parent"
   		android:layout_height="1dp"
   		android:layout_marginStart="16dp"
   		android:layout_marginEnd="16dp"
   		android:background="@android:color/darker_gray"/>
</LinearLayout>